testsuite/tests/parser/should_fail/T18251c.hs
module T18251c where

f = id @Int
